# forensiciq

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  memory.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/forensiciq/: __init__.py  agent.py  artifacts.py  benchmark.py  checkpoint.py  config.py  evidence_graph.py
backend/forensiciq/api/: routes.py  websocket.py
backend/forensiciq/report/: generator.py
backend/forensiciq/report/templates/: report.html.j2
backend/forensiciq/tools/: __init__.py  base.py  file_identify.py  hash_compute.py  log2timeline.py  regripper.py  sleuthkit.py  strings_tool.py  volatility.py  yara_scan.py
backend/tests/: test_benchmark.py  test_checkpoint.py  test_confidence.py  test_corroboration.py  test_security.py
cases/sample/: memory.txt
docs/: ARCHITECTURE.md  DEMO_BRIEF.md  DEPLOYMENT.md  DEVPOST.md  PRD.md  TASKS.md
evidence/: ACCURACY_REPORT.md  DATASET.md  benchmark_results.json  investigation_log.json  sample_ground_truth.json
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: AuditTimeline.tsx  ConfidenceBar.tsx  EvidenceGraph.tsx  FindingCard.tsx  FindingsSidebar.tsx  MockFeed.tsx  (+6 more)
(+7 files in other folders)
